# ws-aiogram

./: .gitignore  Dockerfile  justfile  pyproject.toml
src/application/dto/: admin_message.py  client_message.py  message.py
src/application/interfaces/broker/: publisher.py
src/application/interfaces/postgres/: uow.py
src/application/interfaces/redis/: storage.py
src/application/interfaces/tg/: api.py
src/application/interfaces/use_cases/: base.py
src/application/interfaces/ws/: connection_manager.py  gateway.py
src/application/services/broker/: publish.py
src/application/use_cases/: admin_message_use_case.py  client_message_use_case.py  publish_admin_message_use_case.py  publish_client_message_use_case.py  receive_admin_message_use_case.py  receive_client_message_use_case.py  send_message2client_use_case.py
src/domain/: mapper.py
src/domain/entities/: admin_message.py  client_message.py  message.py  ticket.py
src/domain/errors/: __init__.py  base.py  ticket_status.py  uid.py
src/domain/errors/entities/: __init__.py  message.py  ticket.py
src/domain/errors/values/: __init__.py  numbers.py  strings.py  uid.py
src/domain/values/: __init__.py  base.py  enums.py  numbers.py  text.py  ticket_status.py  uid.py
src/infrastructure/broker/: publisher.py
src/infrastructure/config/: config_loader.py  config_storage.py
src/infrastructure/ioc_container/: __init__.py  aio_http_provider.py  logger_provider.py  postgres_provider.py  rabbit_provider.py  redis_provider.py  tg_provider.py  use_cases_provider.py  ws_provider.py
src/infrastructure/postgres/: tables.py  uow.py
src/infrastructure/postgres/repositories/: mapper.py  message.py  ticket.py
src/infrastructure/redis/: errors.py  storage.py
src/infrastructure/tg/: api.py
src/infrastructure/ws/: __init__.py  connection.py  gateway.py
src/presentation/: dependency_container.py
src/presentation/amqp_api/: main.py  router.py
src/presentation/bot/: main.py
src/presentation/tg/: main.py
src/presentation/ws/: html_base.py  internal_router.py  main.py  router.py
tests/: .env.test  conftest.py  test.docker-compose.yml
tests/fixtures/: config.py  entities.py  ioc_container.py  postgres.py
tests/src/application/use_cases/: test_admin_message_use_case.py  test_admin_response_use_case.py  test_client_message_use_case.py  test_publish_admin_message_use_case.py  test_publish_client_message_use_case.py  test_receive_admin_message_use_case.py  (+1 more)
tests/src/domain/: test_mapper.py
(+21 files in other folders)
