[project]
name = "ws-aiogram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.3",
    "python-dotenv>=1.2.2",
    "rust-just>=1.51.0",
    "sqlalchemy>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]
