[project]
name = "ws-aiogram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.28.2",
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.3",
    "python-dotenv>=1.2.2",
    "rust-just>=1.51.0",
    "sqlalchemy>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]


[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--cov=src --cov-report=html -v -s -vv --verbose --color=yes"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

include = ["src/**.py"]
exclude = ["htmlcov", "src/infrastructure/postgres/migrations/**.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ARG",
    "ANN",
    "D",
    "PLR0913",
    "EM101",
    "PLW2901",
    "RET505",
    "SIM103",
    "ISC003",
    "PGH003",
    "COM812",
    "RUF001",
    "TRY401",
    "S307",
    "S102",
    "E203",
    "S311",
    "S104",
    "TRY003",
    "B904",
    "TC001",
]


[tool.ruff.lint.isort]
known-local-folder = ["src"]
section-order = ["future", "standard-library", "first-party", "third-party", "local-folder"]
lines-after-imports = 2
lines-between-types = 0
order-by-type = true
combine-as-imports = true
force-single-line = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
